--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
+amqp==2.1.1
+billiard==3.5.0.2
+bitstring==3.1.5
+celery==4.0.0
+certifi==2016.9.26
 click==6.6
 Flask==0.11.1
 itsdangerous==0.24
 Jinja2==2.8
+keyring==8.7
+keyrings.alt==1.1.1
+kombu==4.0.0
 MarkupSafe==0.23
+pyicloud==0.9.1
+pytz==2016.7
+redis==2.10.5
+requests==2.11.1
+six==1.10.0
+tzlocal==1.3
+vine==1.1.3
 Werkzeug==0.11.11
